restored basic filtering functionality